crates/leo4-idl/src/parse.rs
//! Recursive-descent parser for the on-disk `.leo4-schema` text format
//! emitted by `Leo4Plugin.Emit`. Two-pass: raw parse first, then a
//! shape-resolution pass that turns `Named { fqn }` references into
//! concrete `IDLType::Record`/`Variant`/`Enum`/`Resource`.
//!
//! Scope notes:
//!   * Comments / doc strings are not expected in the canonical form
//!     (the emitter strips them); the parser tolerates `// …` line
//!     comments defensively but `/* … */` is not yet supported.
//!   * Full `SPEC/idl-grammar.ebnf` (top-level `world`, `use`, free
//!     `type`, `constraint_decl`) is *not* covered yet — only what the
//!     Lake plugin emits, which is enough for `tests/mangling/`.
//!   * Higher-kind generics (`F : Type -> Type`) are out of scope of
//!     the text emit (the plugin rejects them at admit-set time); this
//!     parser similarly does not accept kind annotations.

use std::collections::HashMap;
use std::fmt;

use crate::idl::{FuncDecl, IDLType, Schema, UserDecl};

#[derive(Debug, Clone, PartialEq, Eq)]
pub enum ParseError {
    UnexpectedEof { at: usize },
    Expected { at: usize, what: String },
    InvalidIdent { at: usize },
    UnknownTypeKeyword { at: usize, found: String },
    TrailingInput { at: usize },
}

impl fmt::Display for ParseError {
    fn fmt(&self, f: &mut fmt::Formatter<'_>) -> fmt::Result {
        match self {
            ParseError::UnexpectedEof { at } => write!(f, "unexpected EOF at byte {at}"),
            ParseError::Expected { at, what } => {
                write!(f, "expected {what} at byte {at}")
            }
            ParseError::InvalidIdent { at } => write!(f, "invalid identifier at byte {at}"),
            ParseError::UnknownTypeKeyword { at, found } => {
                write!(f, "unknown type keyword `{found}` at byte {at}")
            }
            ParseError::TrailingInput { at } => write!(f, "trailing input after schema at byte {at}"),
        }
    }
}

impl std::error::Error for ParseError {}

#[derive(Debug, Clone, PartialEq, Eq)]
pub enum ResolveError {
    UnknownNominal { fqn: String },
    EnumWithArgs { fqn: String },
}

impl fmt::Display for ResolveError {
    fn fmt(&self, f: &mut fmt::Formatter<'_>) -> fmt::Result {
        match self {
            ResolveError::UnknownNominal { fqn } => {
                write!(f, "unknown nominal type `{fqn}` (no record/enum/variant/resource decl)")
            }
            ResolveError::EnumWithArgs { fqn } => {
                write!(f, "enum `{fqn}` cannot take generic arguments")
            }
        }
    }
}

impl std::error::Error for ResolveError {}

/// Pre-resolution type expression.
#[derive(Clone, Debug, PartialEq, Eq)]
pub enum RawType {
    /// Builtin shapes (primitives, list/option/result/tuple/io, `Self`).
    /// Recursion through these doesn't go through nominal lookup.
    Builtin(IDLType),
    /// A nominal reference: `Sample.Point`, `My.Kv.Pair<u32, string>`, …
    Named { fqn: String, args: Vec<RawType> },
}

#[derive(Clone, Debug, PartialEq, Eq)]
pub enum RawDecl {
    Record { fqn: String, fields: Vec<(String, RawType)> },
    Enum { fqn: String, cases: Vec<String> },
    Variant { fqn: String, cases: Vec<(String, Vec<RawType>)> },
    Resource { fqn: String },
}

impl RawDecl {
    fn fqn(&self) -> &str {
        match self {
            RawDecl::Record { fqn, .. }
            | RawDecl::Enum { fqn, .. }
            | RawDecl::Variant { fqn, .. }
            | RawDecl::Resource { fqn, .. } => fqn,
        }
    }
}

#[derive(Clone, Debug, PartialEq, Eq)]
pub struct RawFunc {
    pub name: String,
    pub params: Vec<(String, RawType)>,
    pub ret: RawType,
}

/// A `use path [as ident];` declaration.
#[derive(Clone, Debug, PartialEq, Eq)]
pub struct UseDeclRaw {
    /// Dotted/colon-segmented path, raw text.
    pub path: String,
    /// Optional rename via `as <ident>`.
    pub alias: Option<String>,
}

/// A `type Name [generic_params] = type;` alias.
#[derive(Clone, Debug, PartialEq, Eq)]
pub struct TypeAliasRaw {
    pub name: String,
    pub generics: Vec<GenericParamRaw>,
    pub body: RawType,
}

/// A `constraint Name = body;` declaration. v0 keeps the body raw text;
/// constraint evaluation lives in the plugin / Phase 4.
#[derive(Clone, Debug, PartialEq, Eq)]
pub struct ConstraintDeclRaw {
    pub name: String,
    /// Verbatim body text (whitespace-collapsed). Parsed lazily by the
    /// plugin's constraint-evaluator; the parser only confirms balanced
    /// braces.
    pub body: String,
}

/// A single `interface Name [generic_params] { … }` block.
#[derive(Clone, Debug, PartialEq, Eq)]
pub struct InterfaceRaw {
    pub name: String,
    pub generics: Vec<GenericParamRaw>,
    pub decls: Vec<RawDecl>,
    pub funcs: Vec<RawFunc>,
    pub use_decls: Vec<UseDeclRaw>,
}

/// A `world Name { … }` block. Currently parsed but not used by the
/// downstream resolver — Phase 3+ WIT lowering revisits this.
#[derive(Clone, Debug, PartialEq, Eq)]
pub struct WorldRaw {
    pub name: String,
    /// Verbatim body lines, post-whitespace collapse.
    pub items: Vec<String>,
}

/// `generic_params` entry, pre-resolution. The body fields keep raw
/// text for the `:` annotation; the Phase 1 `Schema` collapses this to
/// just the param name (kind/value erasure lives at admit-set time).
#[derive(Clone, Debug, PartialEq, Eq)]
pub enum GenericParamRaw {
    /// `T : kind` or bare `T` (defaults to `Type`).
    Type {
        name: String,
        kind: Option<RawKind>,
        constraint: Option<String>,
    },
    /// `n : <value-type>` — dependent value generic, erased at the boundary.
    Value { name: String, ty: RawType },
}

#[derive(Clone, Debug, PartialEq, Eq)]
pub enum RawKind {
    Type,
    Arrow(Box<RawKind>, Box<RawKind>),
}

#[derive(Clone, Debug, PartialEq, Eq)]
pub struct RawSchema {
    pub package: String,
    /// Convenience: name of the first interface, if any (else "").
    pub interface: String,
    /// Convenience: all nominal decls from top level and from the first
    /// interface, in source order with top-level first.
    pub decls: Vec<RawDecl>,
    /// Convenience: funcs from the first interface.
    pub funcs: Vec<RawFunc>,
    /// Full document detail (Phase 2+).
    pub use_decls: Vec<UseDeclRaw>,
    pub type_decls: Vec<TypeAliasRaw>,
    pub constraint_decls: Vec<ConstraintDeclRaw>,
    pub interfaces: Vec<InterfaceRaw>,
    pub worlds: Vec<WorldRaw>,
}

/// Top-level entry: parse and resolve in one shot.
pub fn parse(input: &str) -> Result<Schema, Box<dyn std::error::Error>> {
    let raw = parse_raw(input)?;
    let schema = resolve(&raw)?;
    Ok(schema)
}

/// Parse to `RawSchema` without resolving named types. Accepts the full
/// `SPEC/idl-grammar.ebnf` `document` shape (`package_decl`, `use_decl`,
/// `interface_decl`, `world_decl`, top-level `type_decl`/`constraint_decl`/
/// `nominal_decl`). The Lake plugin currently emits exactly one
/// interface; multiple interfaces / worlds are accepted at parse time
/// for tools that hand-write IDL.
pub fn parse_raw(input: &str) -> Result<RawSchema, ParseError> {
    let mut p = Parser::new(input);
    p.skip_ws();

    // ── package_decl (required, exactly one) ─────────────────────────
    p.expect_keyword("package")?;
    let pkg_name = p.parse_ident_or_kebab()?;
    p.skip_ws();
    let pkg_subnamespace = if p.peek_char() == Some(':') {
        p.pos += 1;
        Some(p.parse_ident_or_kebab()?)
    } else {
        None
    };
    p.skip_ws();
    if p.peek_char() == Some('@') {
        // semver suffix; parsed but not retained — informational on the wire.
        p.pos += 1;
        let _ver = p.parse_semver_segment()?;
    }
    p.expect_char(';')?;

    let package = match pkg_subnamespace {
        Some(sub) => format!("{pkg_name}:{sub}"),
        None => pkg_name,
    };

    // ── top-level items, until EOF ────────────────────────────────────
    let mut top_use_decls: Vec<UseDeclRaw> = Vec::new();
    let mut top_type_decls: Vec<TypeAliasRaw> = Vec::new();
    let mut top_constraint_decls: Vec<ConstraintDeclRaw> = Vec::new();
    let mut top_nominal_decls: Vec<RawDecl> = Vec::new();
    let mut interfaces: Vec<InterfaceRaw> = Vec::new();
    let mut worlds: Vec<WorldRaw> = Vec::new();

    loop {
        p.skip_ws();
        if p.at_end() {
            break;
        }
        if p.peek_keyword("use") {
            top_use_decls.push(p.parse_use_decl()?);
        } else if p.peek_keyword("interface") {
            interfaces.push(p.parse_interface_decl()?);
        } else if p.peek_keyword("world") {
            worlds.push(p.parse_world_decl()?);
        } else if p.peek_keyword("type") {
            top_type_decls.push(p.parse_type_alias_decl()?);
        } else if p.peek_keyword("constraint") {
            top_constraint_decls.push(p.parse_constraint_decl()?);
        } else if p.peek_keyword("record")
            || p.peek_keyword("variant")
            || p.peek_keyword("enum")
            || p.peek_keyword("resource")
            || p.peek_keyword("flags")
        {
            top_nominal_decls.push(p.parse_nominal_decl()?);
        } else {
            return Err(ParseError::Expected {
                at: p.pos,
                what: "top-level item (`use`/`interface`/`world`/`type`/`constraint`/nominal decl)".into(),
            });
        }
    }

    // For backward-compat with the rest of this crate (which expects one
    // interface), pick the first interface as *the* interface and inline
    // its nominal/func decls. Hand-written IDL with multiple interfaces
    // is fine for `parse_raw`; downstream callers that need the full
    // structure read `RawSchema.interfaces` directly.
    let (interface_name, decls, funcs) = match interfaces.first() {
        Some(iface) => {
            let mut decls: Vec<RawDecl> = top_nominal_decls.clone();
            decls.extend(iface.decls.iter().cloned());
            (iface.name.clone(), decls, iface.funcs.clone())
        }
        None => ("".to_string(), top_nominal_decls.clone(), Vec::new()),
    };

    Ok(RawSchema {
        package,
        interface: interface_name,
        decls,
        funcs,
        use_decls: top_use_decls,
        type_decls: top_type_decls,
        constraint_decls: top_constraint_decls,
        interfaces,
        worlds,
    })
}

/// Resolve all `Named { fqn, args }` references against the user
/// declarations the schema itself provides.
pub fn resolve(raw: &RawSchema) -> Result<Schema, ResolveError> {
    let shapes = build_shape_map(&raw.decls);
    let user_decls = raw
        .decls
        .iter()
        .map(|d| resolve_decl(d, &shapes))
        .collect::<Result<Vec<_>, _>>()?;
    let funcs = raw
        .funcs
        .iter()
        .map(|f| {
            let params = f
                .params
                .iter()
                .map(|(n, t)| Ok::<_, ResolveError>((n.clone(), resolve_type(t, &shapes)?)))
                .collect::<Result<Vec<_>, _>>()?;
            let ret = resolve_type(&f.ret, &shapes)?;
            Ok::<_, ResolveError>(FuncDecl {
                name: f.name.clone(),
                params,
                ret,
            })
        })
        .collect::<Result<Vec<_>, _>>()?;
    Ok(Schema {
        package: raw.package.clone(),
        interface: raw.interface.clone(),
        user_decls,
        funcs,
    })
}

#[derive(Copy, Clone, Debug)]
enum Shape {
    Record,
    Enum,
    Variant,
    Resource,
}

fn build_shape_map(decls: &[RawDecl]) -> HashMap<String, Shape> {
    let mut map = HashMap::with_capacity(decls.len());
    for d in decls {
        let s = match d {
            RawDecl::Record { .. } => Shape::Record,
            RawDecl::Enum { .. } => Shape::Enum,
            RawDecl::Variant { .. } => Shape::Variant,
            RawDecl::Resource { .. } => Shape::Resource,
        };
        map.insert(d.fqn().to_string(), s);
    }
    map
}

fn resolve_type(t: &RawType, shapes: &HashMap<String, Shape>) -> Result<IDLType, ResolveError> {
    match t {
        RawType::Builtin(b) => Ok(b.clone()),
        RawType::Named { fqn, args } => {
            let args_idl = args
                .iter()
                .map(|a| resolve_type(a, shapes))
                .collect::<Result<Vec<_>, _>>()?;
            match shapes.get(fqn) {
                Some(Shape::Record) => Ok(IDLType::Record {
                    fqn: fqn.clone(),
                    args: args_idl,
                }),
                Some(Shape::Enum) => {
                    if !args_idl.is_empty() {
                        return Err(ResolveError::EnumWithArgs { fqn: fqn.clone() });
                    }
                    Ok(IDLType::Enum(fqn.clone()))
                }
                Some(Shape::Variant) => Ok(IDLType::Variant {
                    fqn: fqn.clone(),
                    args: args_idl,
                }),
                Some(Shape::Resource) => Ok(IDLType::Resource {
                    fqn: fqn.clone(),
                    args: args_idl,
                }),
                None => Err(ResolveError::UnknownNominal { fqn: fqn.clone() }),
            }
        }
    }
}

fn resolve_decl(d: &RawDecl, shapes: &HashMap<String, Shape>) -> Result<UserDecl, ResolveError> {
    match d {
        RawDecl::Record { fqn, fields } => {
            let fields = fields
                .iter()
                .map(|(n, t)| Ok::<_, ResolveError>((n.clone(), resolve_type(t, shapes)?)))
                .collect::<Result<Vec<_>, _>>()?;
            Ok(UserDecl::Record {
                fqn: fqn.clone(),
                generics: vec![],
                fields,
            })
        }
        RawDecl::Enum { fqn, cases } => Ok(UserDecl::Enum {
            fqn: fqn.clone(),
            cases: cases.clone(),
        }),
        RawDecl::Variant { fqn, cases } => {
            let cases = cases
                .iter()
                .map(|(n, payload)| {
                    let payload = payload
                        .iter()
                        .map(|t| resolve_type(t, shapes))
                        .collect::<Result<Vec<_>, _>>()?;
                    Ok::<_, ResolveError>((n.clone(), payload))
                })
                .collect::<Result<Vec<_>, _>>()?;
            Ok(UserDecl::Variant {
                fqn: fqn.clone(),
                generics: vec![],
                cases,
            })
        }
        RawDecl::Resource { fqn } => Ok(UserDecl::Resource {
            fqn: fqn.clone(),
            generics: vec![],
        }),
    }
}

// ─── Parser internals ────────────────────────────────────────────────────

struct Parser<'a> {
    input: &'a [u8],
    pos: usize,
}

impl<'a> Parser<'a> {
    fn new(input: &'a str) -> Self {
        Self {
            input: input.as_bytes(),
            pos: 0,
        }
    }

    fn at_end(&self) -> bool {
        self.pos >= self.input.len()
    }

    fn peek_char(&self) -> Option<char> {
        self.input.get(self.pos).copied().map(char::from)
    }

    fn skip_ws(&mut self) {
        while self.pos < self.input.len() {
            let c = self.input[self.pos];
            if c.is_ascii_whitespace() {
                self.pos += 1;
            } else if c == b'/' && self.input.get(self.pos + 1) == Some(&b'/') {
                // line comment to end of line — defensive; canonical form has none.
                while self.pos < self.input.len() && self.input[self.pos] != b'\n' {
                    self.pos += 1;
                }
            } else {
                break;
            }
        }
    }

    fn expect_char(&mut self, c: char) -> Result<(), ParseError> {
        self.skip_ws();
        if self.peek_char() == Some(c) {
            self.pos += 1;
            Ok(())
        } else {
            Err(ParseError::Expected {
                at: self.pos,
                what: format!("`{c}`"),
            })
        }
    }

    /// Match keyword `s` only when the following byte is not an identifier
    /// continuation. e.g. `peek_keyword("u8")` against `"u8"` ⇒ true,
    /// against `"u8x"` ⇒ false. Does NOT advance `pos`.
    fn peek_keyword(&self, s: &str) -> bool {
        let bytes = s.as_bytes();
        let mut p = self.pos;
        // Allow leading whitespace for `peek_keyword` so callers don't have to
        // explicitly `skip_ws` first; but we do not consume it.
        while p < self.input.len() && self.input[p].is_ascii_whitespace() {
            p += 1;
        }
        if self.input.get(p..p + bytes.len()) != Some(bytes) {
            return false;
        }
        match self.input.get(p + bytes.len()) {
            Some(b) if is_ident_continue(*b) => false,
            _ => true,
        }
    }

    fn expect_keyword(&mut self, s: &str) -> Result<(), ParseError> {
        if !self.peek_keyword(s) {
            return Err(ParseError::Expected {
                at: self.pos,
                what: format!("keyword `{s}`"),
            });
        }
        self.skip_ws();
        self.pos += s.len();
        Ok(())
    }

    fn parse_ident(&mut self) -> Result<String, ParseError> {
        self.skip_ws();
        let start = self.pos;
        let Some(&first) = self.input.get(self.pos) else {
            return Err(ParseError::UnexpectedEof { at: self.pos });
        };
        if !is_ident_start(first) {
            return Err(ParseError::InvalidIdent { at: self.pos });
        }
        self.pos += 1;
        while self.pos < self.input.len() && is_ident_continue(self.input[self.pos]) {
            self.pos += 1;
        }
        Ok(std::str::from_utf8(&self.input[start..self.pos])
            .unwrap()
            .to_string())
    }

    /// Like `parse_ident` but also accepts kebab segments (`leo4-sample`).
    /// Used for `package` names.
    fn parse_ident_or_kebab(&mut self) -> Result<String, ParseError> {
        self.skip_ws();
        let start = self.pos;
        let Some(&first) = self.input.get(self.pos) else {
            return Err(ParseError::UnexpectedEof { at: self.pos });
        };
        if !is_ident_start(first) {
            return Err(ParseError::InvalidIdent { at: self.pos });
        }
        self.pos += 1;
        while self.pos < self.input.len() {
            let c = self.input[self.pos];
            if is_ident_continue(c) || c == b'-' {
                self.pos += 1;
            } else {
                break;
            }
        }
        Ok(std::str::from_utf8(&self.input[start..self.pos])
            .unwrap()
            .to_string())
    }

    fn parse_fqn(&mut self) -> Result<String, ParseError> {
        let mut s = self.parse_ident()?;
        while self.pos < self.input.len() && self.input[self.pos] == b'.' {
            self.pos += 1;
            let next = self.parse_ident()?;
            s.push('.');
            s.push_str(&next);
        }
        Ok(s)
    }

    fn parse_type(&mut self) -> Result<RawType, ParseError> {
        self.skip_ws();
        // Primitives & builtin generics, in keyword form.
        for (kw, ty) in PRIMITIVE_KEYWORDS {
            if self.peek_keyword(kw) {
                self.expect_keyword(kw)?;
                return Ok(RawType::Builtin(ty.clone()));
            }
        }
        if self.peek_keyword("list") {
            self.expect_keyword("list")?;
            self.expect_char('<')?;
            let t = self.parse_type()?;
            self.expect_char('>')?;
            return Ok(RawType::Builtin(IDLType::List(Box::new(raw_to_builtin(
                t,
            )?))));
        }
        if self.peek_keyword("option") {
            self.expect_keyword("option")?;
            self.expect_char('<')?;
            let t = self.parse_type()?;
            self.expect_char('>')?;
            return Ok(RawType::Builtin(IDLType::Option(Box::new(raw_to_builtin(
                t,
            )?))));
        }
        if self.peek_keyword("result") {
            self.expect_keyword("result")?;
            self.expect_char('<')?;
            let ok = self.parse_type()?;
            self.skip_ws();
            let err = if self.peek_char() == Some(',') {
                self.pos += 1;
                Some(Box::new(raw_to_builtin(self.parse_type()?)?))
            } else {
                None
            };
            self.expect_char('>')?;
            return Ok(RawType::Builtin(IDLType::Result(
                Box::new(raw_to_builtin(ok)?),
                err,
            )));
        }
        if self.peek_keyword("tuple") {
            self.expect_keyword("tuple")?;
            self.expect_char('<')?;
            let mut ts: Vec<IDLType> = Vec::new();
            loop {
                ts.push(raw_to_builtin(self.parse_type()?)?);
                self.skip_ws();
                if self.peek_char() == Some(',') {
                    self.pos += 1;
                } else {
                    break;
                }
            }
            self.expect_char('>')?;
            return Ok(RawType::Builtin(IDLType::Tuple(ts)));
        }
        if self.peek_keyword("io") {
            self.expect_keyword("io")?;
            self.expect_char('<')?;
            let t = self.parse_type()?;
            self.expect_char('>')?;
            return Ok(RawType::Builtin(IDLType::Io(Box::new(raw_to_builtin(t)?))));
        }
        if self.peek_keyword("Self") {
            self.expect_keyword("Self")?;
            self.skip_ws();
            if self.peek_char() == Some('<') {
                self.expect_char('<')?;
                let mut args: Vec<IDLType> = Vec::new();
                loop {
                    args.push(raw_to_builtin(self.parse_type()?)?);
                    self.skip_ws();
                    if self.peek_char() == Some(',') {
                        self.pos += 1;
                    } else {
                        break;
                    }
                }
                self.expect_char('>')?;
                return Ok(RawType::Builtin(IDLType::SelfApp(args)));
            }
            return Ok(RawType::Builtin(IDLType::Self_));
        }
        // Nominal reference (FQN, optional generic args).
        let fqn = self.parse_fqn()?;
        self.skip_ws();
        let args = if self.peek_char() == Some('<') {
            self.pos += 1;
            let mut args: Vec<RawType> = Vec::new();
            loop {
                args.push(self.parse_type()?);
                self.skip_ws();
                if self.peek_char() == Some(',') {
                    self.pos += 1;
                } else {
                    break;
                }
            }
            self.expect_char('>')?;
            args
        } else {
            vec![]
        };
        Ok(RawType::Named { fqn, args })
    }

    fn parse_enum_decl(&mut self) -> Result<RawDecl, ParseError> {
        self.expect_keyword("enum")?;
        let fqn = self.parse_fqn()?;
        let _generics = self.parse_optional_generic_params()?;
        self.expect_char('{')?;
        let mut cases: Vec<String> = Vec::new();
        loop {
            self.skip_ws();
            if self.peek_char() == Some('}') {
                break;
            }
            cases.push(self.parse_ident()?);
            self.skip_ws();
            if self.peek_char() == Some(',') {
                self.pos += 1;
            } else {
                break;
            }
        }
        self.expect_char('}')?;
        self.expect_char(';')?;
        Ok(RawDecl::Enum { fqn, cases })
    }

    fn parse_record_decl(&mut self) -> Result<RawDecl, ParseError> {
        self.expect_keyword("record")?;
        let fqn = self.parse_fqn()?;
        let _generics = self.parse_optional_generic_params()?;
        self.expect_char('{')?;
        let mut fields: Vec<(String, RawType)> = Vec::new();
        loop {
            self.skip_ws();
            if self.peek_char() == Some('}') {
                break;
            }
            let name = self.parse_ident()?;
            self.expect_char(':')?;
            let ty = self.parse_type()?;
            fields.push((name, ty));
            self.skip_ws();
            if self.peek_char() == Some(',') {
                self.pos += 1;
            } else {
                break;
            }
        }
        self.expect_char('}')?;
        self.expect_char(';')?;
        Ok(RawDecl::Record { fqn, fields })
    }

    fn parse_variant_decl(&mut self) -> Result<RawDecl, ParseError> {
        self.expect_keyword("variant")?;
        let fqn = self.parse_fqn()?;
        let _generics = self.parse_optional_generic_params()?;
        self.expect_char('{')?;
        let mut cases: Vec<(String, Vec<RawType>)> = Vec::new();
        loop {
            self.skip_ws();
            if self.peek_char() == Some('}') {
                break;
            }
            let case_name = self.parse_ident()?;
            self.skip_ws();
            let payload = if self.peek_char() == Some('(') {
                self.pos += 1;
                let mut ts: Vec<RawType> = Vec::new();
                loop {
                    ts.push(self.parse_type()?);
                    self.skip_ws();
                    if self.peek_char() == Some(',') {
                        self.pos += 1;
                    } else {
                        break;
                    }
                }
                self.expect_char(')')?;
                ts
            } else {
                vec![]
            };
            cases.push((case_name, payload));
            self.skip_ws();
            if self.peek_char() == Some(',') {
                self.pos += 1;
            } else {
                break;
            }
        }
        self.expect_char('}')?;
        self.expect_char(';')?;
        Ok(RawDecl::Variant { fqn, cases })
    }

    fn parse_resource_decl(&mut self) -> Result<RawDecl, ParseError> {
        self.expect_keyword("resource")?;
        let fqn = self.parse_fqn()?;
        let _generics = self.parse_optional_generic_params()?;
        self.skip_ws();
        // Optional `{ … }` body of methods — accepted, skip-balanced.
        // v0 plugin doesn't emit a body; Phase 3+ may consume it for
        // method dispatch.
        if self.peek_char() == Some('{') {
            self.pos += 1;
            let mut depth: i32 = 1;
            while self.pos < self.input.len() && depth > 0 {
                let c = self.input[self.pos];
                if c == b'{' {
                    depth += 1;
                } else if c == b'}' {
                    depth -= 1;
                }
                self.pos += 1;
            }
        }
        self.expect_char(';')?;
        Ok(RawDecl::Resource { fqn })
    }

    fn parse_use_decl(&mut self) -> Result<UseDeclRaw, ParseError> {
        self.expect_keyword("use")?;
        let path = self.parse_path()?;
        self.skip_ws();
        let alias = if self.peek_keyword("as") {
            self.expect_keyword("as")?;
            Some(self.parse_ident()?)
        } else {
            None
        };
        self.expect_char(';')?;
        Ok(UseDeclRaw { path, alias })
    }

    fn parse_path(&mut self) -> Result<String, ParseError> {
        self.skip_ws();
        let mut s = self.parse_ident()?;
        loop {
            if self.peek_char() == Some(':') {
                self.pos += 1;
                let next = self.parse_ident()?;
                s.push(':');
                s.push_str(&next);
            } else if self.peek_char() == Some('/') {
                self.pos += 1;
                let next = self.parse_ident()?;
                s.push('/');
                s.push_str(&next);
            } else {
                break;
            }
        }
        Ok(s)
    }

    fn parse_semver_segment(&mut self) -> Result<String, ParseError> {
        self.skip_ws();
        let start = self.pos;
        while self.pos < self.input.len() {
            let c = self.input[self.pos];
            if c.is_ascii_digit() || c == b'.' || c == b'-' || c.is_ascii_alphabetic() {
                self.pos += 1;
            } else {
                break;
            }
        }
        if self.pos == start {
            return Err(ParseError::Expected {
                at: self.pos,
                what: "semver".into(),
            });
        }
        Ok(std::str::from_utf8(&self.input[start..self.pos])
            .unwrap()
            .to_string())
    }

    fn parse_type_alias_decl(&mut self) -> Result<TypeAliasRaw, ParseError> {
        self.expect_keyword("type")?;
        let name = self.parse_ident()?;
        let generics = self.parse_optional_generic_params()?;
        self.expect_char('=')?;
        let body = self.parse_type()?;
        self.expect_char(';')?;
        Ok(TypeAliasRaw {
            name,
            generics,
            body,
        })
    }

    fn parse_constraint_decl(&mut self) -> Result<ConstraintDeclRaw, ParseError> {
        self.expect_keyword("constraint")?;
        let name = self.parse_ident()?;
        self.expect_char('=')?;
        // Capture body verbatim up to the terminating `;` (respecting `{}` /
        // `()` nesting). Whitespace will be collapsed by callers that care.
        let body = self.parse_balanced_to_semicolon()?;
        self.expect_char(';')?;
        Ok(ConstraintDeclRaw { name, body })
    }

    fn parse_balanced_to_semicolon(&mut self) -> Result<String, ParseError> {
        self.skip_ws();
        let start = self.pos;
        let mut depth_brace = 0i32;
        let mut depth_paren = 0i32;
        let mut depth_angle = 0i32;
        while self.pos < self.input.len() {
            let c = self.input[self.pos];
            match c {
                b'{' => depth_brace += 1,
                b'}' => depth_brace -= 1,
                b'(' => depth_paren += 1,
                b')' => depth_paren -= 1,
                b'<' => depth_angle += 1,
                b'>' => depth_angle -= 1,
                b';' if depth_brace == 0 && depth_paren == 0 && depth_angle == 0 => break,
                _ => {}
            }
            self.pos += 1;
        }
        let s = std::str::from_utf8(&self.input[start..self.pos])
            .unwrap()
            .trim()
            .to_string();
        Ok(s)
    }

    fn parse_interface_decl(&mut self) -> Result<InterfaceRaw, ParseError> {
        self.expect_keyword("interface")?;
        let name = self.parse_ident()?;
        let generics = self.parse_optional_generic_params()?;
        self.expect_char('{')?;

        let mut decls: Vec<RawDecl> = Vec::new();
        let mut funcs: Vec<RawFunc> = Vec::new();
        let mut use_decls: Vec<UseDeclRaw> = Vec::new();
        loop {
            self.skip_ws();
            if self.peek_char() == Some('}') {
                break;
            }
            if self.peek_keyword("use") {
                use_decls.push(self.parse_use_decl()?);
            } else if self.peek_keyword("enum")
                || self.peek_keyword("record")
                || self.peek_keyword("variant")
                || self.peek_keyword("resource")
                || self.peek_keyword("flags")
            {
                decls.push(self.parse_nominal_decl()?);
            } else if self.peek_keyword("type") {
                // Long-form `type Name = …;` — flatten into a record-style decl
                // by parsing into the type alias, then dropping it into the
                // RawDecl stream when its body is a nominal shape. For other
                // shapes (`type X = list<u32>`) the alias is kept as a
                // type-alias item — but `parse_raw`'s downstream `Schema`
                // doesn't surface aliases yet, so we just lose them here.
                // Phase 3 WIT lowering will need them.
                let _alias = self.parse_type_alias_decl()?;
            } else if self.peek_keyword("func") {
                funcs.push(self.parse_func_decl()?);
            } else {
                return Err(ParseError::Expected {
                    at: self.pos,
                    what: "interface body item".into(),
                });
            }
            // Each sub-decl parser consumes its own trailing `;` (or `}` for
            // bodies). No extra `;` to eat here.
        }
        self.expect_char('}')?;
        Ok(InterfaceRaw {
            name,
            generics,
            decls,
            funcs,
            use_decls,
        })
    }
